--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
 <body>
     <header>
         <nav>
-            <a href="home.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <div id="home"></div>
+    <div id="about"></div>
+    <div id="services"></div>
+    <div id="contact"></div>
+
+    <footer>
+        <p>&copy; 2024 SeinPro</p>
+    </footer>
+
 </body>
+<script src="scripts/app.js"></script>
 </html>
