--- a/sections/home.html
+++ b/sections/home.html
@@ -1,4 +1,7 @@
-<section>
-    <h1>Welcome to SeinPro</h1>
-    <p>This is the Home Section.</p>
-</section>
+<div id="home">
+    <div class="card">
+        <h2>Card Title</h2>
+        <p>Some content goes here.</p>
+        <button class="card-button">Learn More</button>
+    </div>
+</div>
