added: home and about

--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
     <div id="services"></div>
     <div id="contact"></div>
 
+    <!-- Botón de WhatsApp -->
+    <div class="whatsapp-container">
+        <div class="whatsapp-button" onclick="toggleWhatsAppMenu()">
+            <img src="assets/whatsapp.png" alt="WhatsApp">
+        </div>
+        <div class="whatsapp-menu" id="whatsappMenu">
+            <a href="https://wa.me/+51970042683?text=Hola%20SeinPro,%20estoy%20interesado%20en%20saber%20más" target="_blank">
+                Hola SeinPro, estoy interesado en saber más.
+            </a>
+            <a href="https://wa.me/+51970042683?text=Quisiera%20agendar%20una%20cita%20con%20ustedes" target="_blank">
+                Quisiera agendar una cita con ustedes.
+            </a>
+            <a href="https://wa.me/+51970042683?text=Me%20gustaría%20conocer%20sus%20servicios" target="_blank">
+                Me gustaría conocer sus servicios y productos.
+            </a>
+        </div>
+    </div>
+
+
 </body>
 
 <footer>
