--- a/sections/about.html
+++ b/sections/about.html
@@ -1,4 +1,29 @@
-<section>
-    <h2>About Us</h2>
-    <p>Information about your company.</p>
+<section id="about" class="about-us">
+    <div class="about-container">
+        <div class="about-image">
+            <img src="assets/about.jpg" alt="Nosotros">
+        </div>
+        <div class="about-content">
+            <div class="about-us-box">
+                <h2>Quiénes Somos</h2>
+                <p class="about-description">
+                Somos una empresa dedicada al bienestar y desarrollo del sector ganadero y de mascotas, ofreciendo servicios y productos de alta calidad para mejorar la productividad y salud animal. Brindamos soluciones innovadoras como inseminación artificial y transferencia de embriones en ganado vacuno.
+            </p>
+            </div>
+            <div class="about-values">
+                <div class="about-box">
+                    <h3>Misión</h3>
+                    <p>
+                        Brindar productos y servicios de excelencia que contribuyan al bienestar animal, la sostenibilidad del sector ganadero y la satisfacción de nuestros clientes, asegurando siempre el respaldo técnico y la calidad que nos distingue.
+                    </p>
+                </div>
+                <div class="about-box">
+                    <h3>Visión</h3>
+                    <p>
+                        Ser la empresa líder en soluciones ganaderas y cuidado animal en la región, reconocida por nuestra innovación, compromiso con la calidad y el impacto positivo en la productividad de nuestros clientes.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
