Create contact and service

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,4 +1,26 @@
-<section>
-    <h2>Contact Us</h2>
-    <p>Contact details or form goes here.</p>
+<section class="contact-section">
+    <h2>Contacto</h2>
+    <p>¡Estamos aquí para ayudarte! Completa el formulario o encuentra nuestra ubicación en el mapa.</p>
+
+    <div class="contact-container">
+        
+        <div class="contact-form">
+            <form>
+                <input type="text" placeholder="Nombres" required>
+                <input type="email" placeholder="Correo" required>
+                <input type="tel" placeholder="Teléfono" required>
+                <textarea placeholder="¿Cómo podemos ayudarte?" rows="4" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+
+        
+        <div class="map-container">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63390.43241978935!2d-79.8902406563721!3d-6.781776979885433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef232963dfff%3A0xa703e3454a7814bb!2sChiclayo!5e0!3m2!1ses-419!2spe!4v1734489093412!5m2!1ses-419!2spe" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
 </section>
